# stm32mp157_cm4

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.c
app/compile/: CMakeLists.txt  arm_app.ld
bootloader/: CMakeLists.txt  main.c
bootloader/compile/: CMakeLists.txt
bsp/: CMakeLists.txt
bsp/arch/: CMakeLists.txt  start.s
bsp/soc/: CMakeLists.txt
bsp/soc/stm32l4/: CMakeLists.txt  rcc_clk.c  reg_access.c  system.c
bsp/soc/stm32l4/include/: rcc_clk.h  reg_access.h  soc_init.h  soc_map.h  soc_reg_access.h
doc/bugs/: arm_complie.md
drivers/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt  st_gpio.c  st_gpio.h
drivers/uart/: CMakeLists.txt  st_uart.c  st_uart.h
openocd/: debug.sh  readme.md  stm32l496x.cfg
tools/: .gitignore
tools/imgtools/: buffer_image_gen.sh  combine_image.sh  encrypt_tool.py  mifgen.sh
tools/imgtools/imgtool/: image.py  main.py
tools/imgtools/kms/: image_encrypted_aes_test.key  image_sign_secp256r1_test.pem
