get_current_component_dir_and_name(component_dir component_name)

set(BOOTLOADER_INCLUDE "")
set(BOOTLOADER_SOURCE "")

add_subdirectory(compile)

list(APPEND BOOTLOADER_INCLUDE "${component_dir}")
list(APPEND BOOTLOADER_SOURCE "${component_dir}/main.c")

list(APPEND GLOBAL_INCLUDE ${BOOTLOADER_INCLUDE})
list(APPEND GLOBAL_SOURCE ${BOOTLOADER_SOURCE})

set(GLOBAL_INCLUDE ${GLOBAL_INCLUDE} PARENT_SCOPE)
set(GLOBAL_SOURCE ${GLOBAL_SOURCE} PARENT_SCOPE)
set(COMPILE_PROJECT_FLAGS ${COMPILE_PROJECT_FLAGS} PARENT_SCOPE)
set(LINK_PROJECT_FLAGS ${LINK_PROJECT_FLAGS} PARENT_SCOPE)
